--- a/dgclock.html
+++ b/dgclock.html
@@ -9,13 +9,7 @@
 <body>
     <div class="hero">
         <div class="container">
-            <div class="clock">
-                <span id="hrs">00</span>
-                <span>:</span>
-                <span id="mins">00</span>
-                <span>:</span>
-                <span id ='sec'>00</span>
-            </div>
+            <div class="clock"></div>
         </div>
     </div>
     <script src="dgclock.js"></script>
